FixScroll
Disable scrollbar

--- a/Rizzario.css
+++ b/Rizzario.css
@@ -5,8 +5,12 @@
 	--main-color: #1403a5;
 	--font-light-w: #f7fadd;
 	--font-light-y: #fcef14;
+	--position: '-0%';
 }
-/*header*/
+/*html*/
+html {
+	overflow-x: hidden;
+}
 
 /*body*/
 body {
@@ -14,7 +18,7 @@ body {
 	z-index: -1;
 	max-width: 100%;
 	min-width: 285px;
-	overflow-x: hidden;
+	overflow: hidden;
 }
 /*h1 tag font*/
 .about h1,
@@ -51,7 +55,7 @@ ol, ul {
 	overflow-wrap: break-word;
 }
 /*section*/
-section {
+section:not(.main) {
 	max-width: 1280px;
 	margin: auto;
 	top: 35px;
@@ -66,7 +70,7 @@ section {
 /*Main Section Tag*/
 .about {
 	/* box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.05), 0 2px 2px 0 rgba(0, 0, 0, 0.05); */
-	margin-top: 60px;
+	/* margin-top: 60px; */
 }
 .Image-Desc .big {
 	height: 320px; 
@@ -136,8 +140,9 @@ section {
 	width: 0;
 	height: 0;
 }
-.Contact {
-	margin-top: 50px;
+section.Contact {
+	margin: 50px 0 50px 0;
+	display: block;
 }
 .text-plain {
 	display: block;
@@ -424,7 +429,7 @@ header nav li a:hover {
 	position: fixed;
 	top: 0;
 	z-index: 4;
-}
+} 
 /* Tab button s section */
 .tab-button {
 	text-align:center;
@@ -501,7 +506,7 @@ footer {
 	position: relative;
 	bottom: 0px;
 	width: 100%;
-	top: 35px;
+	/* top: 35px; */
 }
 footer nav {
 	float: right;
@@ -622,9 +627,6 @@ footer nav li a:hover {
 		top: 0;
 		padding:16px 16px 0 0;
 		transition: all 0.3s ease-in-out;
-	}
-	.sticky {
-		width: 100vw;
 	}
 	header nav {
 		opacity: 0;
